infra/flux-webhook/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiver
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 8923
      protocol: TCP
      targetPort: 9292
