infra/flux-webhook/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web
      namespace: gateway-namespace
      sectionName: web-gw
  hostnames:
    - "webhook.alixroden.co.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
