infra/flux-webhook/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webhook.alixroden.co.uk`)
      kind: Rule
      services:
        - kind: Service
          name: webhook-receiver
          port: 80
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
